Fixed overflow and padding problem on bigger screens.

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   line-height: 1.5em;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 img {
@@ -62,8 +62,7 @@ header {
 .container {
   width: 80%;
   margin: auto;
-  overflow: hidden;
-  padding: 50px;
+  padding: 15vh;
 }
 
 img.main {
@@ -212,28 +211,26 @@ footer p a {
   color: var(--clr-text)
 }
 
+/* Media queries */
 @media screen and (max-width: 934px) {
   img {
     width: 50%;
   }
 
-  container {
-    width: 100%;
+  header{
     height: auto;
   }
 
   h1 {
     text-align: center;
-    line-height: 1.1em;
-    font-size: 2.369em;
+    line-height: 1.1em,
     padding-bottom: 20px;
     border-bottom: 3px solid var(--clr-text);
   }
 
   .container {
-    width: 70%;
+    width: 100%;
     margin: auto;
-    margin-top: -20px;
   }
 
   p.premessa {
@@ -247,7 +244,7 @@ footer p a {
 
   article {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -255,10 +252,16 @@ footer p a {
   }
 
   div.card {
+    height: auto;
     flex-grow: 1;
     width: 50%;
     margin-bottom: 50vh 0vh 50vh 0vh;
     flex-wrap: wrap;
+    border-radius: 0px;
+  }
+
+  article:nth-child(2) .card {
+    background-color: var(--clr-laccent)
   }
 
   article:nth-child(7) .card {
